final minor edits

--- a/output/output.html
+++ b/output/output.html
@@ -1,4 +1,7 @@
 
+<!DOCTYPE html>
+<html lang="en-us">
+<head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -6,6 +9,12 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 <title>Our Project Team</title>
     <style>
+        body {
+            background-image: url(../img/background.jpg);
+            background-size: cover;
+            background-attachment: fixed;
+            background-repeat: no-repeat;
+        }
         .page-top {
             background-color: red;
             color: #fff;
@@ -45,6 +54,13 @@
             margin: 0;
             padding: .5em;
         }
+        img.avatar {
+            max-width: 40px;
+            max-height: 40px;
+            color: #fff;
+            float: left;
+            margin-right: 10px;
+        }
         
     </style>
 </head> 
@@ -60,13 +76,13 @@
      <div class="employee-card">
             <div class="card-header">
                 <h3>Dave</h3>
-                <h3><i class="fas fa-glasses"></i> Manager</h3>
+                <img class="avatar" alt="Manager" src="../img/mug-hot.svg"><h3>Manager</h3>
             </div>
                 <div class="card-content">
                     <ul>
-                        <li>ID: 3</li>
-                        <li>Email: davepollan@gmail.com</li>
-                        <li>Office Number: 67</li>
+                        <li><strong>ID:</strong> 3</li>
+                        <li><strong>Email:</strong> davepollan@gmail.com</li>
+                        <li><strong>Office Number:</strong> 67</li>
                     </ul>
              </div>
         </div>
@@ -76,13 +92,13 @@
      <div class="employee-card">
             <div class="card-header">
                 <h3>Ray</h3>
-                <h3><i class="fas fa-glasses"></i> Engineer</h3>
+                <img class="avatar" alt="Engineer" src="../img/glasses.svg"><h3>Engineer</h3>
             </div>
                 <div class="card-content">
                     <ul>
-                        <li>ID: 7</li>
-                        <li>Email: ray@mail.com</li>
-                        <li>GitHub: rayman</li>
+                        <li><strong>ID:</strong> 7</li>
+                        <li><strong>Email:</strong> ray@mail.com</li>
+                        <li><strong>GitHub:</strong> rayman</li>
                     </ul>
              </div>
         </div>
@@ -92,13 +108,13 @@
      <div class="employee-card">
             <div class="card-header">
                 <h3>John</h3>
-                <h3><i class="fas fa-glasses"></i> Engineer</h3>
+                <img class="avatar" alt="Engineer" src="../img/glasses.svg"><h3>Engineer</h3>
             </div>
                 <div class="card-content">
                     <ul>
-                        <li>ID: 13</li>
-                        <li>Email: johndoe@mail.com</li>
-                        <li>GitHub: jdoe</li>
+                        <li><strong>ID:</strong> 13</li>
+                        <li><strong>Email:</strong> johndoe@mail.com</li>
+                        <li><strong>GitHub:</strong> johndoe</li>
                     </ul>
              </div>
         </div>
@@ -108,13 +124,13 @@
      <div class="employee-card">
             <div class="card-header">
                 <h3>Lisa</h3>
-                <h3><i class="fas fa-glasses"></i> Intern</h3>
+                <img class="avatar" alt="Intern" src="../img/user-graduate.svg"><h3>Intern</h3>
             </div>
                 <div class="card-content">
                     <ul>
-                        <li>ID: 17</li>
-                        <li>Email: lisa@upenn.edu</li>
-                        <li>School: University of Penn</li>
+                        <li><strong>ID:</strong> 17</li>
+                        <li><strong>Email:</strong> lisa@upenn.edu</li>
+                        <li><strong>School:</strong> University of Penn</li>
                     </ul>
              </div>
         </div>
